[package]
name = "mavlink-proxy"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
mavlink = { version = "0.8.5", features = [ "emit-extensions", "ardupilotmega"] }
