[package]
name = "mavlink-proxy"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5.1"
mavlink = { git = "https://github.com/patrickelectric/rust-mavlink", branch = "serialport-rs", features = [ "emit-extensions", "ardupilotmega", "direct-serial"] }
num_cpus = "1.13.0"
threadpool = "1.8.1"
